Ajout de qqes fonctions

--- a/Serveur/accueil.html
+++ b/Serveur/accueil.html
@@ -12,8 +12,8 @@
     <body> -->
         <div class="cover-container h-100 text-center">
             <main class="px-3" style="position: absolute; width: 100%; height: 100px;top:0; bottom: 0; left: 0; right: 0; margin: auto;" >
-                <h1 class="display-4">Bienvenue dans votre espace de gestion éco-responsable</h1>
-                <h3>Veuillez cliquer sur l'une des catégories pour continuer </h3>
+                <h1 class="display-4">Bienvenue dans votre espace de gestion de vos plantes</h1>
+                <h3>Veuillez cliquer sur l'une des catégories ci-dessus pour continuer </h3>
             </main>
         </div>
     </body>
