--- a/Serveur/barre_navigation.html
+++ b/Serveur/barre_navigation.html
@@ -2,7 +2,7 @@
       <!-- Barre de navigation -->
       <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <a class="navbar-brand" href="/">
-            <img src="Logo_JeunePousse.png">
+            <img src="https://raw.githubusercontent.com/YounesChefou/JeunePousse/main/Serveur/Logo_JeunePousse.png" width="50" height="50">
             <!-- Regler largeur, hauteur -->
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,7 +15,7 @@
               <a class="nav-link" href="/">Accueil</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/">Mes plantes</a>
+              <a class="nav-link" href="/mesplantes">Mes plantes</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/">Annuaire</a>
