qqes pages + do_POST

--- a/Serveur/barre_navigation.html
+++ b/Serveur/barre_navigation.html
@@ -1,7 +1,7 @@
     <body>
       <!-- Barre de navigation -->
-      <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">
+      <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" href="/accueil">
             <img src="https://raw.githubusercontent.com/YounesChefou/JeunePousse/main/Serveur/Logo_JeunePousse.png" width="50" height="50">
             <!-- Regler largeur, hauteur -->
         </a>
@@ -12,16 +12,16 @@
         <div class="collapse navbar-collapse" id="navbarsExample03">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/">Accueil</a>
+              <a class="nav-link" href="/accueil">Accueil</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/mesplantes">Mes plantes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/">Annuaire</a>
+              <a class="nav-link" href="/annuaire">Annuaire</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/">Configuration</a>
+              <a class="nav-link" href="/configuration">Configuration</a>
             </li>
           </ul>
         </div>
