--- a/Serveur/site/header_create_account.html
+++ b/Serveur/site/header_create_account.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr">
   <head>
@@ -37,54 +36,23 @@
       background-color: #f5f5f5;
     }
 
+
+    #icone {
+    background-color: white;
+    border: white;
+    }
+
     .form-signin {
       width: 100%;
       max-width: 330px;
       padding: 15px;
       margin: 0 auto;
     }
-    .form-signin .checkbox {
-      font-weight: 400;
-    }
-    .form-signin .form-control {
-      position: relative;
-      box-sizing: border-box;
-      height: auto;
-      padding: 10px;
-      font-size: 16px;
-    }
     .form-signin .form-control:focus {
       z-index: 2;
-    }
-    .form-signin input[type="email"] {
-      margin-bottom: -1px;
-      border-bottom-right-radius: 0;
-      border-bottom-left-radius: 0;
-    }
-    .form-signin input[type="password"] {
-      margin-bottom: 10px;
-      border-top-left-radius: 0;
-      border-top-right-radius: 0;
     }
     </style>
   </head>
 
   <body class="text-center">
-    <form class="form-signin" action="/accueil" method="post">
-
-      <img class="mb-4" src="https://raw.githubusercontent.com/YounesChefou/JeunePousse/main/Serveur/Logo_JeunePousse.png" alt="" width="72" height="72">
-      <h1 class="h3 mb-3 font-weight-normal">Bonjour, veuillez entrer vos identifiants</h1>
-      <label for="inputEmail" class="sr-only">E-mail</label>
-      <input type="email" id="inputEmail" name="email" class="form-control" placeholder="Email address" required autofocus>
-      <label for="inputPassword" class="sr-only">Password</label>
-      <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
-      <div class="checkbox mb-3">
-        <!-- <label>
-          <input type="checkbox" value="remember-me"> Remember me
-        </label> -->
-      </div>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">S'identifier</button>
-      <p class="mt-5 mb-3 text-muted">&copy; 2021 JeunePousse</p>
-    </form>
-  </body>
-</html>
+    <div class="row text-center">
