options page finished

--- a/Serveur/site/options.html
+++ b/Serveur/site/options.html
@@ -20,6 +20,7 @@
             height:100%;
             background-image: url('https://www.irishtimes.com/polopoly_fs/1.3839101.1553612711!/image/image.jpg_gen/derivatives/box_620_330/image.jpg');
             background-size: cover;
+            background-repeat: no-repeat;
             z-index: -1;
             opacity:0.4;
         }
