dashboard sans graphe

--- a/Serveur/dashboard.html
+++ b/Serveur/dashboard.html
@@ -120,7 +120,7 @@
         var ctx4 = document.getElementById("chart4");
 
 	      var myChart = new Chart(ctx, {
-    		type: 'line',
+    		type: 'timeline',
     		data: {
     		  labels: ["08/02/2021", "09/02/2021", "10/02/2021", "11/02/2021"],
     		  datasets: [{
