--- a/Serveur/site/header_options.html
+++ b/Serveur/site/header_options.html
@@ -13,22 +13,30 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <style>
 
-        #div_img{
-              position:fixed;
-              padding:0;
-              margin:0;
-              top:0;
-              left:0;
-              width:100%;
-              height:100%;
-              background-image: url('https://www.irishtimes.com/polopoly_fs/1.3839101.1553612711!/image/image.jpg_gen/derivatives/box_620_330/image.jpg');
-              background-size: cover;
-              z-index: -1;
-              opacity:0.4;
-          }
-        #icone {
-          background-color: white;
-          border: black;
+        @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+
+
+        body {
+            font-family: 'Poppins', sans-serif;
+            background: #fafafa;
         }
+        #div_img{
+                  position:fixed;
+                  padding:0;
+                  margin:0;
+                  top:0;
+                  left:0;
+                  width:100%;
+                  height:100%;
+                  background-image: url('https://www.irishtimes.com/polopoly_fs/1.3839101.1553612711!/image/image.jpg_gen/derivatives/box_620_330/image.jpg');
+                  background-size: cover;
+                  z-index: -1;
+                  opacity:0.4;
+              }
+        #icone {
+              background-color: white;
+              border: black;
+        }
+
         </style>
     </head>
