--- a/Serveur/site/identification.html
+++ b/Serveur/site/identification.html
@@ -52,7 +52,7 @@
   <body class="text-center">
     <div class="row text-center">
       <div class="col-sm-5">
-        <form class="form-signin" action="http://localhost:8888/dashboard" method="post">
+        <form class="form-signin" action="http://localhost:8888/connexion" method="post">
           <h1 class="h3 mb-3 font-weight-normal">Bonjour, veuillez entrer vos identifiants</h1>
           <label for="inputEmail" class="sr-only">E-mail</label>
           <input type="email" id="inputEmail" name="Email" class="form-control" placeholder="Email address" required autofocus>
