--- a/Serveur/site/header_dashboard.html
+++ b/Serveur/site/header_dashboard.html
@@ -15,7 +15,11 @@
         <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
+        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+        <script type="text/javascript">
+          google.charts.load('current', {'packages':['line']});
+        </script>
         <style>
 
         @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
@@ -23,78 +27,87 @@
 
         body {
             font-family: 'Poppins', sans-serif;
-            background: #fafafa;
+            background-color: #fafafa;
+            overflow-x: hidden;
         }
         #div_img{
                   position:fixed;
-                  padding:0;
-                  margin:0;
-                  top:0;
-                  left:0;
-                  width:100%;
-                  height:100%;
-                  background-image: url('https://www.irishtimes.com/polopoly_fs/1.3839101.1553612711!/image/image.jpg_gen/derivatives/box_620_330/image.jpg');
-                  background-size: cover;
+                  background-image: url('https://www.10wallpaper.com/wallpaper/1366x768/1108/40_soft_focus_green_leaves_photo-hazy_soft_green_leaves_photos_1366x768.jpg')
+
                   z-index: -1;
-                  opacity:0.4;
               }
         #icone {
               background-color: white;
               border: black;
         }
 
-      .sidebar {
+        .sidebar {
         margin: 0;
         padding: 0;
-        width: 200px;
         background-color: #7386D5;
         position: fixed;
         height: 100%;
+        width: 200px;
         overflow: auto;
-      }
+        margin-left: 0;
+        margin-top:50px;
+        }
 
-      .sidebar a {
+        .sidebar a {
         display: block;
         color: white;
         font-size: 18px;
         padding: 16px;
         text-decoration: none;
-      }
+        }
 
-      .sidebar a.active {
+        .sidebar a.active {
         background-color: #93A6C5;
         color: white;
-      }
+        }
 
-      .sidebar a:hover:not(.active) {
+        .sidebar a:hover:not(.active) {
         background-color: #555;
         color: white;
-      }
-      .main{
-        margin-left: 200px;
-      }
+        }
 
-      div.content {
-        margin-left: 200px;
-        padding: 1px 16px;
-        height: 1000px;
-      }
 
-      @media screen and (max-width: 700px) {
+        .main{
+        padding-left: 250px;
+        }
+
+        .sticky{
+        position: sticky;
+        top: 0;
+        font-size:70px;
+        }
+        @media screen and (max-width: 950px) {
+        .main{padding-left: 0px;padding-top: 50px;}
         .sidebar {
           width: 100%;
           height: auto;
           position: relative;
         }
-        .sidebar a {float: left;}
+        .sidebar a {float: none;
+          text-align: justify;}
         div.content {margin-left: 0;}
-      }
-
-      @media screen and (max-width: 400px) {
-        .sidebar a {
-          text-align: center;
-          float: none;
         }
 
-      </style>
-  </head>
+        @media screen and (max-width: 767px) {
+        .main{padding-left: 0px;padding-top: 50px;}
+        .sidebar {
+          width: 100%;
+          height: auto;
+          position: relative;
+          margin-top:200px;
+        }
+        .sidebar a {float: none;
+          text-align: center;}
+        div.content {margin-left: 0;}
+        }
+
+
+
+        </style>
+
+        </head>
