--- a/Serveur/site/header_options.html
+++ b/Serveur/site/header_options.html
@@ -19,6 +19,7 @@
         body {
             font-family: 'Poppins', sans-serif;
             background: #fafafa;
+            overflow-x: hidden;
         }
         #div_img{
                   position:fixed;
