--- a/Serveur/site/header_dashboard.html
+++ b/Serveur/site/header_dashboard.html
@@ -17,4 +17,93 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
 
-        <script type="text/javascript">
+    <style>
+
+    @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+
+
+    body {
+        font-family: 'Poppins', sans-serif;
+        background-color: #fafafa;
+        overflow-x: hidden;
+    }
+    #div_img{
+              position:fixed;
+              background-image: url('https://www.10wallpaper.com/wallpaper/1366x768/1108/40_soft_focus_green_leaves_photo-hazy_soft_green_leaves_photos_1366x768.jpg')
+
+              z-index: -1;
+          }
+    #icone {
+          background-color: white;
+          border: black;
+    }
+
+    .sidebar {
+    margin: 0;
+    padding: 0;
+    background-color: #7386D5;
+    position: fixed;
+    height: 100%;
+    width: 200px;
+    overflow: auto;
+    margin-left: 0;
+    margin-top:50px;
+    }
+
+    .sidebar a {
+    display: block;
+    color: white;
+    font-size: 18px;
+    padding: 16px;
+    text-decoration: none;
+    }
+
+    .sidebar a.active {
+    background-color: #93A6C5;
+    color: white;
+    }
+
+    .sidebar a:hover:not(.active) {
+    background-color: #555;
+    color: white;
+    }
+
+
+    .main{
+    padding-left: 250px;
+    }
+
+    .sticky{
+    position: sticky;
+    top: 0;
+    font-size:70px;
+    }
+    @media screen and (max-width: 950px) {
+    .main{padding-left: 0px;padding-top: 50px;}
+    .sidebar {
+      width: 100%;
+      height: auto;
+      position: relative;
+    }
+    .sidebar a {float: none;
+      text-align: justify;}
+    div.content {margin-left: 0;}
+    }
+
+    @media screen and (max-width: 767px) {
+    .main{padding-left: 0px;padding-top: 50px;}
+    .sidebar {
+      width: 100%;
+      height: auto;
+      position: relative;
+      margin-top:200px;
+    }
+    .sidebar a {float: none;
+      text-align: center;}
+    div.content {margin-left: 0;}
+    }
+
+
+    </style>
+
+    </head>
